--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "vue": "^2.7.11",
+    "vue-chartjs": "^1.0.3",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
